# Revnara

./: .gitattributes  .gitignore  README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: backend-ci.yml  flutter-ci.yml  secret-scan.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  db_mixins.py  main.py
backend/app/agents/: contracts.py  executor.py  models.py  planner.py  queue.py  registry.py  runtime.py  schemas.py  verifier.py
backend/app/audit/: models.py  writer.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/company/: models.py  router.py  schemas.py  service.py
backend/app/explainability/: models.py  reader.py  schemas.py  writer.py
backend/app/files/: models.py  router.py  schemas.py  service.py  storage.py
backend/app/model_gateway/: gateway.py
backend/app/model_gateway/providers/: base.py  openai_provider.py
backend/app/opportunities/: csv_import.py  models.py  pipeline.py  qualification.py  research.py  router.py  safety_screening.py  schemas.py  service.py  skill_detection.py  team_matching.py
backend/app/organizations/: authorization.py  invitations.py  models.py  permissions_catalog.py  router.py  schemas.py  service.py
backend/app/rag/: chunking.py  context_builder.py  embeddings.py  ingestion.py  models.py  queue.py  retrieval.py  router.py  schemas.py  text_extraction.py
backend/app/tenancy/: context.py  middleware.py  pg_session.py  rate_limit.py  repository.py
backend/app/tools/: registry.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 036d51bf76d3_company_brain.py  2bb53136e1ab_qualification_matching.py  6d35818d2a14_opportunities.py  79b971d274a7_agent_runtime.py  82641a4bc6d5_knowledge_chunks.py  8ce88e711b7d_audit_events.py  c1c056366c7e_organizations.py  fa2c5f721e68_baseline.py
backend/tests/: README.md  conftest.py
backend/tests/agents/: conftest.py  test_agent_worker_reliability.py
backend/tests/integration/: test_agent_runtime.py  test_app_boot.py  test_company_api.py  test_files_api.py  test_members_api.py  test_opportunities_api.py  test_organizations_api.py  test_qualification_matching_api.py  test_rag_ingestion.py
backend/tests/rag/: README.md  conftest.py  test_queue.py  test_retrieval_and_isolation.py  test_worker_pipeline.py
backend/tests/rls/: README.md  conftest.py  test_agent_runtime_isolation.py  test_company_brain_isolation.py  test_cross_tenant_isolation.py
backend/tests/security/: test_no_upwork_automation.py  test_prompt_injection_defense.py
backend/tests/unit/: test_agent_registry.py  test_audit_writer.py  test_authorization.py  test_chunking.py  test_company_schemas.py  test_context_builder.py  test_csv_import.py  test_embeddings.py  test_health.py  test_jwt.py  test_model_gateway.py  test_pipeline.py  test_planner.py  test_qualification.py  test_rate_limit.py  test_safety_screening.py  test_storage.py  test_team_matching.py  test_tenancy_context.py  test_text_extraction.py  test_tool_registry.py
backend/workers/agent_worker/: main.py
backend/workers/document_worker/: main.py
backend/workers/embedding_worker/: main.py
desktop/: .gitignore  README.md  pubspec.yaml
desktop/lib/: main.dart
docs/: BDOS_Enforcement_Spec.md  BDOS_Enterprise_Architecture_Blueprint_v2_Validated.md  BDOS_MVP_Cut.md  BDOS_Validation_Matrix.md  Revnara_Implementation_Plan.md  Revnara_Sprint_Development_Plan.md  rag-pattern.md  rls-pattern.md
supabase/: README.md
(+118 files in other folders)
