[project]
name = "revnara-backend"
version = "0.1.0"
description = "Revnara backend: FastAPI API, agent runtime, and workers."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic[email]>=2.9",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyjwt[crypto]>=2.9",
    # Real HTTP calls to Supabase Storage's signed-upload-url API
    # (app/files/storage.py), not just the test client below.
    "httpx>=0.27",
    # Sprint 5 (Company Brain Retrieval / RAG): pgvector's SQLAlchemy
    # integration (app/rag/models.py), and real document text extraction
    # (app/rag/chunking.py) -- both extension-required at the DB layer
    # (vector, pgmq on Supabase) and library-required here.
    "pgvector>=0.3",
    "pypdf>=5.0",
    "python-docx>=1.1",
    # Sprint 6 (Opportunity Intake): CSV import is a multipart/form-data
    # file upload (app/opportunities/router.py's UploadFile) -- FastAPI's
    # form/file parsing needs this at runtime even though nothing imports
    # it directly.
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "workers*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom (Depends/Header/Query/Path/Body as
# a default argument value) is a false positive for B008 -- FastAPI
# special-cases these at request time, they don't have the shared-mutable-
# default problem B008 exists to catch.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Security",
    # require_permission is a dependency *factory* (BE3.1) -- it must be
    # called per-route with a specific permission string, so it can't be
    # a fixed module-level singleton the way a plain Depends target can.
    "app.organizations.authorization.require_permission",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["workers/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
